--- a/page.html
+++ b/page.html
@@ -79,19 +79,12 @@
             </div>
             <div class="py-5">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-md-6 col-lg-4 py-3">
-                            <div><img class="img-fluid" src="assets/img/content/about.jpeg"></div>
-                        </div>
-                        <div class="col-12 col-md-6 col-lg-8 text-right py-3">
-                            <h3 class="text-uppercase h5 mb-5">Marka</h3>
-                            <p class="mb-4">&nbsp;Jesteśmy polską marką. Ubrania projektujemy w naszym&nbsp; biurze w Łodzi. Szyjemy je etycznie w lokalnych szwalniach.&nbsp; Tworzymy rzeczy głównie z polskich dzianin i tkanin&nbsp; pochodzących z Europy. Powstaliśmy w 2012 roku z chęci do&nbsp; robienia czegoś wyjątkowego i czystego w swych intencjach.&nbsp; Nasza marka narodziła się podczas rozmowy przyjaciółek -&nbsp; wspierających się i rozumiejących potrzeby kobiet silnych i&nbsp; nowoczesnych. Nazwa jest wyrazem kobiecego wsparcia. W&nbsp; wolnym tłumaczeniu oznacza „Ania chcę”, bo to właśnie Ania&nbsp; Banasiak, założycielka, miała marzenie, żeby stworzyć markę&nbsp;ponadczasową.<br></p>
-                            <h3 class="text-uppercase h6 mb-4">&nbsp;ANATAKA 2021<br></h3>
-                            <p class="font-weight-bolder mb-4">Wiosenno/letnia kolekcja Anataki to spełnienie niespełnionych obietnic o dalekich podróżach, zarówno tych w głąb siebie, ale i tych namacalnych. Tę kolekcję, stworzoną w wyjątkowych czasach, skierowaliśmy do kobiet świadomych, połączonych ze swoją kobiecością, dokładnie wiedzących czego chcą. Mówimy do tych, którym brakuje poczucia znanej normalności. Nasze ubrania będą Wam towarzyszyć w każdym przypływającym nowym doświadczeniu.<br></p>
-                            <p class="mb-4">&nbsp;Stonowane beże, delikatnie mieniące się złota i srebra, czysta, szlachetna biel, głęboka czerń i naturalne zielenie tworzą kolorystyczną bazę wiosenno/letnich linii. Materiały, z których powstały nasze ubrania są oddychające i wysokiej jakości - bawełny, wiskozy, lyocelle.<br></p>
-                            <p class="mb-4">Ubrania Anataki są tworzone przez kobiety dla kobiet.<br></p>
-                        </div>
-                    </div>
+                    <h2 class="mb-3">Content Page</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt nulla eu erat tempor ultrices. Curabitur ullamcorper lectus diam, non congue nisl euismod et. Nulla auctor erat libero. Aliquam sagittis quam vel ligula sagittis, non ornare nulla laoreet. Nam ex libero, vehicula et dolor et, rutrum egestas turpis. Phasellus convallis quam ac nibh consequat pretium. Nullam molestie metus quis fringilla pellentesque. Pellentesque quis efficitur nibh, sed dignissim lorem. Mauris varius justo in diam consectetur posuere.<br></p>
+                    <p>In lacus sem, varius at finibus eget, porttitor eget ante. Mauris lacinia purus augue, et sollicitudin quam dapibus at. Sed sodales, arcu nec imperdiet malesuada, quam ante facilisis nulla, eu posuere turpis nulla ut mi. Quisque blandit laoreet sapien, cursus porttitor tellus mollis nec. Cras a ipsum tellus. In vitae tempus libero. Quisque rutrum vehicula dictum. Duis molestie justo nisl, sed consectetur velit sagittis id. Cras eget lacinia massa. Nunc tincidunt dignissim nunc, vitae rutrum elit dapibus id. Aliquam mattis ut erat quis maximus. Aenean est erat, lacinia sit amet orci eu, cursus tincidunt dolor. Etiam hendrerit luctus lectus vel mattis. Nunc in convallis sapien, eget posuere nibh. Proin metus mauris, fermentum sit amet commodo in, tincidunt eu lectus. Nulla dignissim fringilla fermentum.<br></p>
+                    <p>Donec eleifend sollicitudin velit vitae cursus. Sed feugiat rhoncus efficitur. Integer interdum pellentesque tortor nec fringilla. Praesent vitae luctus neque. Sed eget urna et tellus condimentum tempus id id turpis. Duis at magna id eros congue egestas in non risus. In hac habitasse platea dictumst. Donec tempus mauris felis, id laoreet velit ornare id. Nunc non rhoncus lectus. Proin quis hendrerit massa. Sed id dignissim ipsum, sit amet sollicitudin orci. Donec ac eros velit. Maecenas luctus lectus leo.<br></p>
+                    <p>Fusce dolor ex, cursus et ligula ac, hendrerit hendrerit leo. Quisque non bibendum lorem. Mauris dignissim scelerisque massa vel pulvinar. Aenean commodo tristique sapien vel accumsan. Proin pellentesque orci eu lacus faucibus, et bibendum velit pharetra. Aliquam ut aliquet nisl. Curabitur ultrices maximus aliquet. Donec iaculis sapien metus, in fermentum dolor fringilla vel. Pellentesque aliquet posuere porta. Duis ut erat magna. Sed bibendum malesuada nisl, sed pulvinar quam posuere sit amet. Proin sit amet sem ligula. Ut vel urna eget libero tincidunt volutpat. Sed varius massa eu metus pellentesque maximus.<br></p>
+                    <p>Suspendisse lacinia lorem a odio consectetur aliquam. Proin fringilla dolor et nisi pharetra semper. Fusce iaculis libero id velit sollicitudin, eget ultricies nisl elementum. Maecenas consequat lacus in pretium congue. In luctus venenatis porta. Cras ullamcorper tellus lacinia, commodo mi blandit, faucibus felis. Nullam convallis euismod efficitur.<br></p>
                 </div>
             </div>
         </main>
@@ -122,7 +115,7 @@
                             <ul class="list-unstyled mb-0">
                                 <li><a class="text-white" href="page.html">Regulamin</a></li>
                                 <li><a class="text-white" href="page.html">Polityka</a></li>
-                                <li><a class="text-white" href="page.html">Tabela rozmiarów</a></li>
+                                <li><a class="text-white" href="sizes.html">Tabela rozmiarów</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
