--- a/product.html
+++ b/product.html
@@ -134,10 +134,11 @@
                     <h2>Inne produkty w tej kategorii</h2>
                     <div class="row">
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
+                            <div class="card border-0"><a class="d-block" href="product.html">
+                                    <div class="mb-3">
+                                        <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                    </div>
+                                </a>
                                 <div class="card-body p-0">
                                     <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                     <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -148,10 +149,11 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
+                            <div class="card border-0"><a class="d-block" href="product.html">
+                                    <div class="mb-3">
+                                        <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                    </div>
+                                </a>
                                 <div class="card-body p-0">
                                     <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                     <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -162,10 +164,11 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
+                            <div class="card border-0"><a class="d-block" href="product.html">
+                                    <div class="mb-3">
+                                        <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                    </div>
+                                </a>
                                 <div class="card-body p-0">
                                     <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                     <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -176,10 +179,11 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
+                            <div class="card border-0"><a class="d-block" href="product.html">
+                                    <div class="mb-3">
+                                        <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                    </div>
+                                </a>
                                 <div class="card-body p-0">
                                     <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                     <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -220,7 +224,7 @@
                             <ul class="list-unstyled mb-0">
                                 <li><a class="text-white" href="page.html">Regulamin</a></li>
                                 <li><a class="text-white" href="page.html">Polityka</a></li>
-                                <li><a class="text-white" href="page.html">Tabela rozmiarów</a></li>
+                                <li><a class="text-white" href="sizes.html">Tabela rozmiarów</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
