--- a/sizes.html
+++ b/sizes.html
@@ -79,43 +79,88 @@
             </div>
             <div class="py-5">
                 <div class="container">
-                    <div class="row mb-5">
-                        <div class="col-12 col-lg-auto py-3">
-                            <div class="d-flex justify-content-center"><img class="img-fluid" src="assets/img/content/anataka_mandala.png" style="width: 356px;"></div>
-                        </div>
-                        <div class="col py-3 px-lg-5">
-                            <h2 class="text-uppercase mb-5">Kontakt</h2>
-                            <h6 class="mb-1"> Biuro Anataka</h6>
-                            <p class="mb-4">ul. Matejki 9<br>91-402 Łódź<br>&nbsp;tel: (+48) 42 244 00 10<br>&nbsp;mail: biuro@anataka.pl<br>&nbsp;Pn - Pt&nbsp;godz: 10 - 20</p>
-                            <h6 class="mb-1"> Sklep Internetowy</h6>
-                            <p class="mb-0">tel: (+48) 607600102<br>&nbsp;mail: anataka@anataka.pl<br>&nbsp;Pn - Pt&nbsp;godz: 10-18</p>
-                        </div>
+                    <h2 class="mb-4">Tabela rozmiarów</h2>
+                    <div class="table-responsive text-center mb-5">
+                        <table class="table table-bordered text-nowrap mb-0">
+                            <thead>
+                                <tr>
+                                    <th class="py-4 px-4" colspan="6">Tabela rozmiarów (cm)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th class="py-4 px-4"></th>
+                                    <th class="py-4 px-4">36</th>
+                                    <th class="py-4 px-4">38</th>
+                                    <th class="py-4 px-4">40</th>
+                                    <th class="py-4 px-4">42</th>
+                                    <th class="py-4 px-4">44</th>
+                                </tr>
+                                <tr>
+                                    <th class="py-4 px-4">Biust</th>
+                                    <td class="py-4 px-4">85-87</td>
+                                    <td class="py-4 px-4">89-91<br></td>
+                                    <td class="py-4 px-4">93-95<br></td>
+                                    <td class="py-4 px-4">97-99<br></td>
+                                    <td class="py-4 px-4">101-103<br></td>
+                                </tr>
+                                <tr>
+                                    <th class="py-4 px-4">Talia</th>
+                                    <td class="py-4 px-4">67-69<br></td>
+                                    <td class="py-4 px-4">71-73<br></td>
+                                    <td class="py-4 px-4">75-77<br></td>
+                                    <td class="py-4 px-4">79-81<br></td>
+                                    <td class="py-4 px-4">83-85<br></td>
+                                </tr>
+                                <tr>
+                                    <th class="py-4 px-4">Biodra</th>
+                                    <td class="py-4 px-4">91-93<br></td>
+                                    <td class="py-4 px-4">95-97<br></td>
+                                    <td class="py-4 px-4">99-101<br></td>
+                                    <td class="py-4 px-4">103-105<br></td>
+                                    <td class="py-4 px-4">107-109<br></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <div class="row">
-                        <div class="col-12 col-lg-6 py-3">
-                            <h6 class="text-uppercase mb-4"> Anataka Sp. z o.o.</h6>
-                            <p class="mb-4">ul. Matejki 9<br>91-402 Łódź<br>NIP: 534-239-92-32<br>REGON: 141523941</p>
-                            <p class="mb-4">Sąd Rejonowy dla m. st. Warszawy, XIV Wydział Gospodarczy<br>KRS 0000321146<br>Kapitał zakładowy spółki: 50000 PLN</p>
-                            <p class="mb-4">Konto bankowe PLN: 13 1750 0009 0000 0000 2342 0511<br>w Banku BNP Paribas Bank Polska S.A.</p>
-                            <p class="mb-4">Konto bankowe EUR: PL89 1750 0009 0000 0000 2611 6422<br>SWIFT: PPABPLPKXXX<br>w Banku BNP Paribas Bank Polska S.A.</p>
-                            <p class="mb-0">Konto bankowe GBP: PL83 1750 0009 0000 0000 2891 2749<br>SWIFT: PPABPLPKXXX<br>w Banku BNP Paribas Bank Polska S.A.</p>
-                        </div>
-                        <div class="col-12 col-lg-6 py-3">
-                            <h6 class="text-uppercase mb-4"> Formularz kontaktowy</h6>
-                            <form>
-                                <div class="form-group"><input class="form-control form-control-lg" type="text" placeholder="Twój adres e-mail"></div>
-                                <div class="form-group"><select class="form-control form-control-lg">
-                                        <option value="12" selected="">Wybierz temat</option>
-                                        <option value="13">This is item 2</option>
-                                        <option value="14">This is item 3</option>
-                                    </select></div>
-                                <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Wiadomość"></textarea></div>
-                                <div class="form-group">
-                                    <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-1"><label class="custom-control-label" for="formCheck-1"><small class="d-block">Wyrażam zgodę na przetwarzanie moich danych osobowych przez ANATAKA Sp. z o.o., pod adresem ul. Matejki 9, 91-402 Łódź, NIP: 5342399232, REGON: 141523941, w celu korzystania z prowadzonej przez anataka.pl usługi. Jestem świadomy/świadoma, iż moja zgoda może być odwołana w każdym czasie, więcej w Polityce Prywatności.Zapoznałem się z Polityką prywatności na temat zasad przetwarzania danych osobowych i ją akceptuję. (Więcej informacji)</small></label></div>
-                                </div>
-                                <div class="form-group d-flex justify-content-end mb-0"><button class="btn btn-primary text-uppercase py-2 px-4" type="button">Wyślij</button></div>
-                            </form>
-                        </div>
+                    <div class="table-responsive text-center">
+                        <table class="table table-bordered text-nowrap mb-0">
+                            <thead>
+                                <tr>
+                                    <th class="py-4 px-4" colspan="5">Tabela rozmiarów (cm)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th class="py-4 px-4"></th>
+                                    <th class="py-4 px-4">S</th>
+                                    <th class="py-4 px-4">M</th>
+                                    <th class="py-4 px-4">L</th>
+                                    <th class="py-4 px-4">XL</th>
+                                </tr>
+                                <tr>
+                                    <th class="py-4 px-4">Biust</th>
+                                    <td class="py-4 px-4">81-87<br></td>
+                                    <td class="py-4 px-4">88-93<br></td>
+                                    <td class="py-4 px-4">94-100<br></td>
+                                    <td class="py-4 px-4">101-106<br></td>
+                                </tr>
+                                <tr>
+                                    <th class="py-4 px-4">Talia</th>
+                                    <td class="py-4 px-4">63-69<br></td>
+                                    <td class="py-4 px-4">70-75<br></td>
+                                    <td class="py-4 px-4">76-82<br></td>
+                                    <td class="py-4 px-4">83-88<br></td>
+                                </tr>
+                                <tr>
+                                    <th class="py-4 px-4">Biodra</th>
+                                    <td class="py-4 px-4">86-92<br></td>
+                                    <td class="py-4 px-4">93-99<br></td>
+                                    <td class="py-4 px-4">100-106<br></td>
+                                    <td class="py-4 px-4">107-112<br></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
