--- a/category.html
+++ b/category.html
@@ -155,10 +155,11 @@
                         <div class="col-12 col-lg-8 col-xl-9">
                             <div class="row">
                                 <div class="col-12 col-sm-6 py-3">
-                                    <div class="card border-0">
-                                        <div class="mb-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
+                                    <div class="card border-0"><a class="d-block" href="product.html">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                        </a>
                                         <div class="card-body p-0">
                                             <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                             <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -169,10 +170,11 @@
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-6 py-3">
-                                    <div class="card border-0">
-                                        <div class="mb-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
+                                    <div class="card border-0"><a class="d-block" href="product.html">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                        </a>
                                         <div class="card-body p-0">
                                             <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                             <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -183,10 +185,11 @@
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-6 py-3">
-                                    <div class="card border-0">
-                                        <div class="mb-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
+                                    <div class="card border-0"><a class="d-block" href="product.html">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                        </a>
                                         <div class="card-body p-0">
                                             <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                             <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -197,10 +200,11 @@
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-6 py-3">
-                                    <div class="card border-0">
-                                        <div class="mb-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
+                                    <div class="card border-0"><a class="d-block" href="product.html">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                        </a>
                                         <div class="card-body p-0">
                                             <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                             <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -211,10 +215,11 @@
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-6 py-3">
-                                    <div class="card border-0">
-                                        <div class="mb-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
+                                    <div class="card border-0"><a class="d-block" href="product.html">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                        </a>
                                         <div class="card-body p-0">
                                             <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                             <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -225,10 +230,11 @@
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-6 py-3">
-                                    <div class="card border-0">
-                                        <div class="mb-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
+                                    <div class="card border-0"><a class="d-block" href="product.html">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                        </a>
                                         <div class="card-body p-0">
                                             <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                             <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -271,7 +277,7 @@
                             <ul class="list-unstyled mb-0">
                                 <li><a class="text-white" href="page.html">Regulamin</a></li>
                                 <li><a class="text-white" href="page.html">Polityka</a></li>
-                                <li><a class="text-white" href="page.html">Tabela rozmiarów</a></li>
+                                <li><a class="text-white" href="sizes.html">Tabela rozmiarów</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
