--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <div class="container-fluid p-0">
                     <div class="carousel slide" data-ride="carousel" id="carousel-1">
                         <div class="carousel-inner">
-                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/banners/ana_ss21_baner_50.jpeg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/banners/ana_aw22_baner_premiera1.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/banners/idealne-sukienki-nad-morze_Anataka.jpeg" alt="Slide Image"></div>
+                            <div class="carousel-item active"><a class="d-block" href="category.html"><img class="img-fluid" src="assets/img/banners/ana_ss21_baner_50.jpeg" alt="Slide Image"></a></div>
+                            <div class="carousel-item"><a class="d-block" href="category.html"><img class="img-fluid" src="assets/img/banners/ana_aw22_baner_premiera1.jpg" alt="Slide Image"></a></div>
+                            <div class="carousel-item"><a class="d-block" href="category.html"><img class="img-fluid" src="assets/img/banners/idealne-sukienki-nad-morze_Anataka.jpeg" alt="Slide Image"></a></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
                         <ol class="carousel-indicators">
@@ -90,30 +90,30 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-sm-6 col-md-4 py-3">
-                            <div class="d-flex justify-content-center justify-content-md-start"><img class="img-fluid" src="assets/img/promo/promo_1.jpeg"></div>
+                            <div class="d-flex justify-content-center justify-content-md-start"><a class="d-inline-block" href="category.html"><img class="img-fluid" src="assets/img/promo/promo_1.jpeg"></a></div>
                         </div>
                         <div class="col-12 col-sm-6 col-md-4 py-3">
-                            <div class="d-flex justify-content-center justify-content-md-start"><img class="img-fluid" src="assets/img/promo/promo_2.jpeg"></div>
+                            <div class="d-flex justify-content-center justify-content-md-start"><a class="d-inline-block" href="category.html"><img class="img-fluid" src="assets/img/promo/promo_2.jpeg"></a></div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-4 py-3">
-                            <div class="d-flex justify-content-center justify-content-md-start"><img class="img-fluid" src="assets/img/promo/promo-3.jpeg"></div>
+                            <div class="d-flex justify-content-center justify-content-md-start"><a class="d-inline-block" href="category.html"><img class="img-fluid" src="assets/img/promo/promo-3.jpeg"></a></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="mt-5">
                 <div class="container">
-                    <div class="text-white bg-secondary p-4">
+                    <div class="text-white bg-secondary py-2 px-4">
                         <div class="row">
-                            <div class="col">
+                            <div class="col-12 col-xl-5 py-3 mb-xl-5">
                                 <h1 class="text-uppercase">Newsletter</h1>
                                 <p class="mb-0 font-weight-bold"><strong>Zapisz się do naszego Newslettera i odbierz 10% rabatu na pierwsze zakupy.</strong><br></p>
                             </div>
-                            <div class="col">
-                                <form>
-                                    <div class="form-group"><input class="form-control" type="text" placeholder="Twój adres e-mail"></div>
+                            <div class="col-12 col-xl-7 py-3">
+                                <form class="mt-xl-4 pt-xl-5">
+                                    <div class="form-group"><input class="form-control form-control-lg" type="text" placeholder="Twój adres e-mail"></div>
                                     <div class="form-group"><button class="btn btn-lg text-uppercase text-white p-0 font-weight-bold" type="button">Zapisz się</button></div>
-                                    <div class="form-group">
+                                    <div class="form-group mb-0">
                                         <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-1"><label class="custom-control-label" for="formCheck-1"><small class="d-block">Wyrażam zgodę na przetwarzanie moich danych osobowych przez ANATAKA Sp. z o.o., pod adresem ul. Matejki 9, 91-402 Łódź, NIP: 5342399232, REGON: 141523941, w celu korzystania z prowadzonej przez anataka.pl usługi. Jestem świadomy/świadoma, iż moja zgoda może być odwołana w każdym czasie, więcej w Polityce Prywatności.Zapoznałem się z Polityką prywatności na temat zasad przetwarzania danych osobowych i ją akceptuję. (Więcej informacji)<br></small></label></div>
                                     </div>
                                 </form>
@@ -134,10 +134,11 @@
                             <div class="tab-pane fade show active" role="tabpanel" id="tab-1">
                                 <div class="row">
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -148,10 +149,11 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -162,10 +164,11 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -180,10 +183,11 @@
                             <div class="tab-pane fade" role="tabpanel" id="tab-2">
                                 <div class="row">
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -194,10 +198,11 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -208,10 +213,11 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -226,10 +232,11 @@
                             <div class="tab-pane fade" role="tabpanel" id="tab-3">
                                 <div class="row">
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -240,10 +247,11 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -254,10 +262,11 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
-                                        <div class="card border-0">
-                                            <div class="mb-3">
-                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                            </div>
+                                        <div class="card border-0"><a class="d-block" href="product.html">
+                                                <div class="mb-3">
+                                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                                </div>
+                                            </a>
                                             <div class="card-body p-0">
                                                 <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
@@ -315,7 +324,7 @@
                             <ul class="list-unstyled mb-0">
                                 <li><a class="text-white" href="page.html">Regulamin</a></li>
                                 <li><a class="text-white" href="page.html">Polityka</a></li>
-                                <li><a class="text-white" href="page.html">Tabela rozmiarów</a></li>
+                                <li><a class="text-white" href="sizes.html">Tabela rozmiarów</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
