--- a/shops.html
+++ b/shops.html
@@ -132,7 +132,7 @@
                             <ul class="list-unstyled mb-0">
                                 <li><a class="text-white" href="page.html">Regulamin</a></li>
                                 <li><a class="text-white" href="page.html">Polityka</a></li>
-                                <li><a class="text-white" href="page.html">Tabela rozmiarów</a></li>
+                                <li><a class="text-white" href="sizes.html">Tabela rozmiarów</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
